# PythonProject1

./: .gitignore  CHANGELOG.md  README.md  ai_vs_ai.py  gui.py  launcher.py  options.py  pyproject.toml  scoreboard.py  tic-tac-toe.py
.github/workflows/: ci.yml  ping.yml
a tic-tac-toe game/: gui.py  options.py
a tic-tac-toe game/data/logs/: gui_settings.json.bak
a tic-tac-toe game/data/scoreboard/: badges.json  scoreboard.json  scoreboard.json.bak
a tic-tac-toe game/locales/: en.json  ja.json
a tic-tac-toe game/shared/: deck.py
blackjack/: gui.py
locales/: de.json  en.json  es.json  fr.json  it.json  no.json  ru.json
shared/: audio.py  chips.py  deck.py  options.py  scoreboard.py  settings.py  single_instance.py
shared/locales/: de.json  en.json  es.json  fr.json  it.json  ja.json  no.json  pt.json  ru.json
tests/: test_blackjack_gui_headless.py  test_cli_json.py  test_core.py  test_deck.py  test_gofish_game.py  test_gofish_gui_headless.py  test_gui_headless.py  test_scoreboard.py
tic-tac-toe/: ai_vs_ai.py  gui.py  scoreboard.py
tic-tac-toe/data/logs/: gui_settings.json.bak
tic-tac-toe/data/scoreboard/: badges.json  scoreboard.json  scoreboard.json.bak
tic-tac-toe/tictactoe/: scoreboard.py
tictactoe/: __init__.py  scoreboard.py
